<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".enterOTP"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification_register2"
        android:textColor="@color/app"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.08"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_4_digitvcode_sent_to_you_at"
        android:textColor="@color/itc"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254"
        android:textSize="16dp" android:fontFamily="@font/nunito_sans" android:id="@+id/otpText"/>
    <EditText
        android:layout_width="400dp"
        android:hint="@string/_1234"
        android:height="40dp"
        android:textSize="24sp"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:longClickable="false"
        android:padding="2dp"
        android:background="@drawable/textbox"
        android:layout_weight="0.98"
        android:id="@+id/otpField"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.443" app:layout_constraintHorizontal_bias="0.545"
        android:inputType="phone" android:fontFamily="@font/poppins"
        android:textStyle="bold" android:maxLength="4"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="219dp"
        android:layout_height="47dp"
        app:cornerRadius="20dp"
        android:background="@color/app"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" android:id="@+id/otpSubmit"
        android:fontFamily="@font/open_sans_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>