<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent" >

            <ImageView
                android:src="@drawable/path_1"
                android:layout_marginTop="-20dp"
                android:contentDescription="path_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@drawable/ellipse_1"
                android:contentDescription="ellipse_1"
                android:layout_marginStart="132dp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="132dp" />
            <ImageView android:id="@+id/icon_ionic_ios_arrow_back"
                    android:src="@drawable/icon_ionic_ios_arrow_back"
                    android:contentDescription="icon_ionic_ios_arrow_back"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="19dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                android:layout_marginLeft="24dp" />
            <TextView
                android:fontFamily="Segoe UI"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/name__color"
                android:layout_marginLeft="15.002685546875dp"
                android:layout_marginTop="196dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name__string"
                />
            <EditText android:id="@+id/shaker_muhammed__"
                    android:layout_marginStart="114dp"
                    android:layout_width="248dp"
                    android:layout_height="55dp"
                    android:textStyle="bold"
                    android:alpha="0.77"
                    android:background="@drawable/textboxround"
                    android:fontFamily="@font/open_sans"
                    android:padding="10dp"
                    android:textColor="@color/shaker_muhammed___color"
                    android:textSize="18sp"
                    android:layout_marginLeft="114dp"
                    android:layout_marginTop="187dp"
                    android:text="@string/shaker_muhammed___string"
                    />
            <TextView
                android:fontFamily="Segoe UI"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/name__color"
                android:layout_marginLeft="15.002685546875dp"
                android:layout_marginTop="264dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone___string"
                />
            <TextView android:id="@+id/numString"
                    android:layout_marginStart="114dp"
                    android:layout_width="248dp"
                    android:layout_height="55dp"
                    android:textStyle="bold"
                    android:alpha="0.77"
                    android:background="@drawable/textboxround"
                    android:fontFamily="@font/open_sans"
                    android:padding="10dp"
                    android:textColor="@color/shaker_muhammed___color"
                    android:textSize="18sp"
                    android:layout_marginTop="255dp"
                    android:layout_marginLeft="114dp"
                    android:text="@string/__8804658541155__string"
                    />
            <TextView
                android:fontFamily="Segoe UI"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/name__color"
                android:layout_marginLeft="15.002685546875dp"
                android:layout_marginTop="340dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email__string"
                />
            <EditText android:id="@+id/slifix_gmail_com_"
        android:hint="Enter New Email"
        android:layout_marginTop="323dp"
        android:layout_marginStart="114dp"
        android:layout_width="248dp"
        android:layout_height="55dp"
        android:textStyle="bold"
        android:alpha="0.77"
        android:background="@drawable/textboxround"
        android:fontFamily="@font/open_sans"
        android:padding="10dp"
        android:textColor="@color/shaker_muhammed___color"
        android:textSize="18sp"
        android:layout_marginLeft="114dp" />
            <Button
        android:id="@+id/_save_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="142.5dp"
        android:gravity="center"
        android:layout_marginTop="564.50341796875dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/rectangle_2190_shape"
        android:fontFamily="Segoe UI"
        android:text="@string/_save__string"
        android:textColor="@color/_save__color"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>