<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".createFirstTimePassword">

    <com.ebanx.swipebtn.SwipeButton
        android:id="@+id/createftp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:inner_text="Slide To Create"
        app:inner_text_color="@color/itc"
        app:inner_text_size="16sp"
        app:inner_text_top_padding="18dp"
        app:inner_text_bottom_padding="18dp"
        app:inner_text_background="@drawable/bg"
        app:button_image_height="60dp"
        app:button_image_width="60dp"
        app:button_image_disabled="@drawable/ic_baseline_arrow_forward_ios_24"
        app:button_image_enabled="@drawable/ic_baseline_arrow_forward_ios_24"
        app:button_left_padding="20dp"
        app:button_right_padding="20dp"
        app:button_top_padding="20dp"
        app:button_bottom_padding="20dp"
        app:button_background="@drawable/square"
        app:initial_state="disabled"
        app:has_activate_state="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPass"
        app:layout_constraintVertical_bias="0.447"/>

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:background="@drawable/textboxround"
        android:fontFamily="@font/open_sans"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#CFD1D3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.194" />

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:background="@drawable/textboxround"
        android:fontFamily="@font/open_sans"
        android:hint="@string/re_enter_new_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#CFD1D3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.478" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/as"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" android:id="@+id/imageView5"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription"/>
    <TextView
        android:text="@string/create_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.085" android:textSize="30sp" android:textColor="#0D1724"
        android:fontFamily="@font/open_sans"/>
</androidx.constraintlayout.widget.ConstraintLayout>