<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".login.OTP_Reg">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@color/app"
        app:srcCompat="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:text="@string/otp_verification_register"
        android:textStyle="bold"
        android:textColor="@color/app"
        android:textSize="35sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_the_6_digit_code_sent_to_you_at"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="@font/nunito_sans"/>

    <EditText
        android:id="@+id/otpField"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_above="@+id/otpSubmit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical|center_horizontal"
        android:hint="Phone"
        android:inputType="number"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/otpSubmit"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/submit"
        app:cornerRadius="20dp"
        app:backgroundTint="@color/app" />

</RelativeLayout>