<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".ForgotPassword">

    <EditText
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:background="@drawable/textboxround"
        android:padding="10dp" android:textColor="#CFD1D3"
        android:id="@+id/forgotEtNo" app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.21" android:textSize="18sp"
        android:autofillHints="" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/as"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" android:id="@+id/imageView6"
        android:contentDescription="@string/todo" />
    <TextView
        android:text="@string/resetting_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textView12"
        android:textSize="30sp" android:textColor="#0D1724"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.123"/>

    <com.ebanx.swipebtn.SwipeButton
        android:id="@+id/resetSwipe"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        app:button_background="@drawable/square"
        app:button_bottom_padding="20dp"
        app:button_image_disabled="@drawable/ic_baseline_arrow_forward_ios_24"
        app:button_image_enabled="@drawable/ic_baseline_arrow_forward_ios_24"
        app:button_image_height="60dp"
        app:button_image_width="60dp"
        app:button_left_padding="20dp"
        app:button_right_padding="20dp"
        app:button_top_padding="20dp"
        app:has_activate_state="true"
        app:initial_state="disabled"
        app:inner_text="Slide to Resetting"
        app:inner_text_background="@drawable/bg"
        app:inner_text_bottom_padding="18dp"
        app:inner_text_color="@color/itc"
        app:inner_text_size="18sp"
        app:inner_text_top_padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotEtNo"
        app:layout_constraintVertical_bias="0.702" />
</androidx.constraintlayout.widget.ConstraintLayout>